--- a/lib/views/admin.html
+++ b/lib/views/admin.html
@@ -7,13 +7,13 @@
   hides on mobile, just like the Pure website.">
 
   <title>Admin Page</title>
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+  <link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
   <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/layouts/side-menu-old-ie.css">
     <![endif]-->
   <!--[if gt IE 8]><!-->
-  <link rel="stylesheet" href="http://purecss.io/combo/1.18.13?/css/layouts/side-menu.css">
+  <link rel="stylesheet" href="https://purecss.io/combo/1.18.13?/css/layouts/side-menu.css">
   <!--<![endif]-->
 
 </head>
@@ -71,19 +71,19 @@
         <div class="pure-g">
           <div class="pure-u-1-4">
             <img class="pure-img-responsive"
-            src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+            src="https://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
           </div>
           <div class="pure-u-1-4">
             <img class="pure-img-responsive"
-            src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
+            src="https://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
           </div>
           <div class="pure-u-1-4">
             <img class="pure-img-responsive"
-            src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
+            src="https://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
           </div>
           <div class="pure-u-1-4">
             <img class="pure-img-responsive"
-            src="http://farm8.staticflickr.com/7357/9086701425_fda3024927.jpg" alt="Mountain">
+            src="https://farm8.staticflickr.com/7357/9086701425_fda3024927.jpg" alt="Mountain">
           </div>
         </div>
 
@@ -100,7 +100,7 @@
       </div>
     </div>
   </div>
-  <script src="http://purecss.io/combo/1.18.13?/js/ui.js"></script>
+  <script src="https://purecss.io/combo/1.18.13?/js/ui.js"></script>
 </body>
 
 </html>
